{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 64,
  "lineage": "01d9350f-c103-b389-3350-295df5df15b3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "HelloIG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533266978173:internet-gateway/igw-02f91ec5e7ecca16c",
            "id": "igw-02f91ec5e7ecca16c",
            "owner_id": "533266978173",
            "tags": {
              "Name": "Internet-Gateway"
            },
            "tags_all": {
              "Name": "Internet-Gateway"
            },
            "vpc_id": "vpc-0e010fa80c27ccdba"
          },
          "dependencies": [
            "aws_vpc.hellovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "HelloLB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:533266978173:loadbalancer/app/hello-strapi-lb/fd3fd32772a766ef",
            "arn_suffix": "app/hello-strapi-lb/fd3fd32772a766ef",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "hello-strapi-lb-565970900.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:533266978173:loadbalancer/app/hello-strapi-lb/fd3fd32772a766ef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hello-strapi-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03a2fce8b9b295554"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-042bda9abd7077b42"
              },
              {
                "subnet_id": "subnet-0ec015dcd87bfbf01"
              }
            ],
            "subnets": [
              "subnet-042bda9abd7077b42",
              "subnet-0ec015dcd87bfbf01"
            ],
            "vpc_id": "vpc-0e010fa80c27ccdba",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.HelloSG",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.hellovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:533266978173:listener/app/hello-strapi-lb/fd3fd32772a766ef/b4fc9b0ce713f6e7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:533266978173:targetgroup/HelloTG/cc72c581acd82b54",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:533266978173:listener/app/hello-strapi-lb/fd3fd32772a766ef/b4fc9b0ce713f6e7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:533266978173:loadbalancer/app/hello-strapi-lb/fd3fd32772a766ef",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.HelloLB",
            "aws_lb_target_group.HelloTG",
            "aws_security_group.HelloSG",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.hellovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "HelloTG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:533266978173:targetgroup/HelloTG/cc72c581acd82b54",
            "arn_suffix": "targetgroup/HelloTG/cc72c581acd82b54",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:533266978173:targetgroup/HelloTG/cc72c581acd82b54",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:533266978173:loadbalancer/app/hello-strapi-lb/fd3fd32772a766ef"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "HelloTG",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "TG"
            },
            "tags_all": {
              "Name": "TG"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e010fa80c27ccdba"
          },
          "dependencies": [
            "aws_vpc.hellovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "HelloRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533266978173:route-table/rtb-0f2a126362c29c062",
            "id": "rtb-0f2a126362c29c062",
            "owner_id": "533266978173",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f91ec5e7ecca16c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e010fa80c27ccdba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.HelloIG",
            "aws_vpc.hellovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTA1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0539adb6a38bb40c8",
            "route_table_id": "rtb-0f2a126362c29c062",
            "subnet_id": "subnet-0ec015dcd87bfbf01"
          },
          "dependencies": [
            "aws_internet_gateway.HelloIG",
            "aws_route_table.HelloRT",
            "aws_subnet.subnet1",
            "aws_vpc.hellovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTA2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca1846aaf30df87a",
            "route_table_id": "rtb-0f2a126362c29c062",
            "subnet_id": "subnet-042bda9abd7077b42"
          },
          "dependencies": [
            "aws_internet_gateway.HelloIG",
            "aws_route_table.HelloRT",
            "aws_subnet.subnet2",
            "aws_vpc.hellovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "HelloSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533266978173:security-group/sg-03a2fce8b9b295554",
            "description": "Allow Port 1337 80 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a2fce8b9b295554",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1337
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "HelloSG",
            "name_prefix": "",
            "owner_id": "533266978173",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG"
            },
            "tags_all": {
              "Name": "SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e010fa80c27ccdba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hellovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533266978173:subnet/subnet-0ec015dcd87bfbf01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec015dcd87bfbf01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533266978173",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Hello-public-Subnet1"
            },
            "tags_all": {
              "Name": "Hello-public-Subnet1"
            },
            "vpc_id": "vpc-0e010fa80c27ccdba"
          },
          "dependencies": [
            "aws_vpc.hellovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533266978173:subnet/subnet-042bda9abd7077b42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042bda9abd7077b42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533266978173",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Hello-public-Subnet2"
            },
            "tags_all": {
              "Name": "Hello-public-Subnet2"
            },
            "vpc_id": "vpc-0e010fa80c27ccdba"
          },
          "dependencies": [
            "aws_vpc.hellovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hellovpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533266978173:vpc/vpc-0e010fa80c27ccdba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0caf2d8d1d55ed758",
            "default_route_table_id": "rtb-0102c5ad146e44c10",
            "default_security_group_id": "sg-0e53462f787f5a44e",
            "dhcp_options_id": "dopt-0140214a45646b561",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e010fa80c27ccdba",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0102c5ad146e44c10",
            "owner_id": "533266978173",
            "tags": {
              "Name": "Hello-node-VPC"
            },
            "tags_all": {
              "Name": "Hello-node-VPC"
            }
          }
        }
      ]
    }
  ]
}